@@ -1,3 +1,9 @@
+2000-07-13  Alexander V. Lukyanov  <lav@yars.free.net>
+
+	* ftpclass.cc, ftpclass.h: (SendArrayInfoRequests) new method;
+	  fix gcc-2.96 error.
+	* LocalAccess.cc: fix rels.
+
 2000-07-12  Alexander V. Lukyanov  <lav@yars.free.net>
 
 	* Http.cc: don't query for accept* if hftp.
